--- a/style.css
+++ b/style.css
@@ -30,7 +30,7 @@ section {
 
 
 section ul {
-    text-align: justify;
+    text-align: left;
 }
 
 
@@ -50,7 +50,7 @@ div.section-divider {
 }
 
 div.container {
-    max-width: 50%;
+    max-width: 65%;
     margin: 0 auto;
 }
 
@@ -138,7 +138,7 @@ p {
     font-size: 1.1rem;
     /* padding-left: 10px; */
     /* padding-right: 10px; */
-    text-align: justify;
+    text-align: left;
     line-height: 1.5rem;
 }
 
