--- a/style.css
+++ b/style.css
@@ -10,6 +10,7 @@ html {
     font-size: 16px;
     scroll-behavior: smooth;
     scroll-padding-top: 70px;
+    overflow-x: hidden; 
 }
 
 
@@ -17,6 +18,8 @@ body {
     text-align: center;  
     background-color: white;  
     color: white;
+    overflow-x: hidden; 
+    min-height: 100vh; 
 }
 
 
@@ -50,7 +53,7 @@ div.section-divider {
 }
 
 div.container {
-    max-width: 75%;
+    max-width: 50%;  
     margin: 0 auto;
 }
 
@@ -107,18 +110,16 @@ h1 {
 
 
 h2 {
-    font-size: 2.5rem;
     text-align: left;
-    /* margin-top: 30px; */
+    font-size: 2.5rem;
     margin-bottom: 50px;
     letter-spacing: 0.1rem;
 }
 
 
 h3 {
-    font-size: 1.2rem;
     text-align: left;
-    /* margin-top: 10px; */
+    font-size: 1.2rem;
     margin-bottom: 20px;
 }
 
@@ -560,3 +561,67 @@ div.footer-bottom p {
     text-align: center;
 }
 
+
+
+
+/* ***************************************************************************** */
+/* Handle mobile devices */
+@media screen and (max-width: 767px) {
+    nav.sidebar {
+        display: none;
+    }
+    
+    div.container {
+        max-width: 90%;  
+    }
+
+    h1 {
+        font-size: 2.8rem;
+        letter-spacing: 0.2rem;
+        padding-bottom: 8px;
+    }
+
+    #experience_header {
+        font-size: 2.3rem;
+        letter-spacing: 0.15rem;
+    }
+
+    h2 {
+        font-size: 1.8rem;
+        margin-bottom: 35px;
+    }
+
+    h3 {
+        font-size: 1.0rem;
+    }
+
+    h4 {
+        font-size: 1.0rem;
+    }
+
+    p {
+        font-size: 1.0rem;
+        margin-bottom: 30px;
+        line-height: 1.4rem;
+    }
+
+    section {
+        padding-top: 60px;
+        padding-bottom: 80px;
+    }
+
+    section li {
+        font-size: 1rem;
+        line-height: 1.4rem;
+        margin-bottom: 10px;
+    }
+    
+    section.education h3 {
+        font-size: 1.2rem;
+    }
+
+    div.section-divider {
+        max-width: 75%;
+        margin: 100px auto;
+    }
+}
