Changed font to Roboto

--- a/style.css
+++ b/style.css
@@ -5,8 +5,28 @@
     box-sizing: border-box;
 }
 
+
+@font-face {
+    font-family: 'Roboto';
+    src: url('./fonts/Roboto-VariableFont_wdth,wght.ttf') format('truetype');
+    font-weight: 100 900; 
+    font-stretch: 75% 100%;
+    font-style: normal;
+}
+
+
+@font-face {
+    font-family: 'Roboto';
+    src: url('./fonts/Roboto-Italic-VariableFont_wdth,wght.ttf') format('truetype');
+    font-weight: 100 900; 
+    font-stretch: 75% 100%;
+    font-style: italic;
+}
+
+
 html {
-    font-family: 'Arial', sans-serif;
+    font-family: 'Roboto', 'Arial', sans-serif;
+    font-weight: 400;
     font-size: 16px;
     scroll-behavior: smooth;
     scroll-padding-top: 70px;
@@ -155,6 +175,10 @@ p {
     font-weight: normal;
 }
 
+
+.bold {
+    font-weight: bold;
+}
 
 
 
