Aligned some headers to the right

--- a/style.css
+++ b/style.css
@@ -181,6 +181,12 @@ p {
 }
 
 
+.text-right {
+    text-align: right;
+}
+
+
+
 
 /* ***************************************************************************** */
 /* Top Navigation Bar */
