--- a/style.css
+++ b/style.css
@@ -225,7 +225,10 @@ nav.topbar .nav-links li {
     padding: 10px;
     border: 1px solid transparent;
     border-radius: 3px;
-    transition: background-color 0.6s ease, border-color 0.6s ease;  
+    transition-property: background-color, border-color;
+    transition-duration: 0.7s;
+    transition-timing-function: ease-out;
+    transition-delay: 0.1s;
 }
 
 
@@ -306,7 +309,7 @@ nav.sidebar li {
     padding-bottom: 10px;
     padding-left: 10px;
     padding-right: 10px;
-    transition: background-color 0.6s ease;  
+    transition: background-color 0.7s ease-out 0.1s;  
 }
 
 
@@ -425,7 +428,10 @@ div.image-container {
 div.image-container img {
     max-width: calc(50% - 10px);
     height: auto;
-    transition: transform 0.4s ease, box-shadow 0.4s ease;
+    transition-property: transform, box-shadow;
+    transition-duration: 0.4s;
+    transition-timing-function: ease-out;
+    transition-delay: 0.1s;
 }
 
 
@@ -565,7 +571,7 @@ div.footer-content p {
 div.footer-content a {
     color: white;
     text-decoration: none;
-    transition: color 0.3s ease;
+    transition: color 0.3s ease 0.1s;
 }
 
 
