--- a/style.css
+++ b/style.css
@@ -24,12 +24,46 @@
 }
 
 
+/* Global Variables */
+:root {
+    /* Website Widths */
+    --website-main-width: 60%;
+    --website-main-width-mobile: 85%;
+    --website-main-width-ultrawide-2560: 50%;
+    --website-main-width-ultrawide-3440: 40%;
+
+    --nav-topbar-height: 70px;
+
+    --footer-content-min-width: 200px;
+
+    --half-width: 50%;
+    --half-image-gap: 10px;
+
+
+    /* Colors */
+    --nav-topbar-background-color: rgb(35, 39, 47);
+    --nav-sidebar-background-color: rgb(18, 28, 95);
+    --nav-link-hover-color: rgb(41, 119, 202);
+    --nav-link-sidebar-hover-color: rgba(41, 119, 202, 0.75);
+
+    --footer-background-color: #22262f;
+    --footer-border-color: rgba(255, 255, 255, 0.15);
+    --footer-bottom-text-color: rgba(255, 255, 255, 0.5);
+
+
+    /* Transitions */
+    --nav-link-transition-duration: 0.7s;
+    --transition-duration-quick: 0.3s;
+    --transition-delay: 0.1s;
+  }
+
+
 html {
     font-family: 'Roboto', 'Arial', sans-serif;
     font-weight: 400;
     font-size: 16px;
     scroll-behavior: smooth;
-    scroll-padding-top: 70px;
+    scroll-padding-top: var(--nav-topbar-height);
     overflow-x: hidden; 
 }
 
@@ -75,7 +109,7 @@ div.section-divider {
 
 
 div.container {
-    max-width: 60%;  
+    max-width: var(--website-main-width);  
     margin: 0 auto;
 }
 
@@ -201,7 +235,7 @@ nav.topbar {
     justify-content: space-between;
     align-items: center;
     padding: 15px 0;
-    background-color: rgb(35, 39, 47);
+    background-color: var(--nav-topbar-background-color);
     width: 100%;
     position: fixed;
     top: 0;
@@ -226,10 +260,11 @@ nav.topbar .nav-links li {
     padding: 10px;
     border: 1px solid transparent;
     border-radius: 3px;
+
     transition-property: background-color, border-color;
-    transition-duration: 0.7s;
+    transition-duration: var(--nav-link-transition-duration);
     transition-timing-function: ease-out;
-    transition-delay: 0.1s;
+    transition-delay: var(--transition-delay);
 }
 
 
@@ -262,8 +297,8 @@ nav.topbar .nav-links.right a:last-child {
 
 
 nav.topbar .nav-links li:hover {
-    background-color: rgb(41, 119, 202);
-    border-color: rgb(41, 119, 202);
+    background-color: var(--nav-link-hover-color);
+    border-color: var(--nav-link-hover-color);
     cursor: pointer; 
 }
 
@@ -276,11 +311,11 @@ nav.sidebar {
     width: fit-content; 
     height: fit-content; 
     position: fixed; 
-    top: 70px;
+    top: var(--nav-topbar-height);
     right: 0;
     /* padding: 20px; */
     /* background-color: #20232a; */
-    background-color: rgb(18, 28, 95);
+    background-color: var(--nav-sidebar-background-color);
     text-align: center;
     /* border-left: 1px solid #8a2121; */
     /* box-shadow: -2px 0 5px 0 rgba(0, 0, 0, 0.1); */
@@ -310,7 +345,7 @@ nav.sidebar li {
     padding-bottom: 10px;
     padding-left: 10px;
     padding-right: 10px;
-    transition: background-color 0.7s ease-out 0.1s;  
+    transition: background-color var(--nav-link-transition-duration) ease-out var(--transition-delay);  
 }
 
 
@@ -323,13 +358,13 @@ nav.sidebar a {
 
 
 nav.sidebar li:hover {
-    background-color: rgba(41, 119, 202, 0.75);
+    background-color: var(--nav-link-sidebar-hover-color);
     cursor: pointer; 
 }
 
 
 nav.sidebar li.active {
-    background-color: rgba(41, 119, 202, 0.75);
+    background-color: var(--nav-link-sidebar-hover-color);
 }
 
 
@@ -342,7 +377,7 @@ section.about_me {
     /* background-color: #1d2339; */
     background-color: rgb(61, 49, 105);
     /* background-color: lightblue; */
-    margin-top: 70px;
+    margin-top: var(--nav-topbar-height);
     /* scroll-margin-top: 70px; */
 }
 
@@ -427,7 +462,7 @@ section.projects {
 
 
 div.image-container img {
-    max-width: calc(50% - 10px);
+    max-width: calc(var(--half-width) - var(--half-image-gap));
     height: auto;
     transition-property: transform, box-shadow;
     transition-duration: 0.4s;
@@ -443,13 +478,13 @@ div.image-container img:hover {
 
 
 div.image-container a {
-    max-width: calc(50% - 10px);
+    max-width: calc(var(--half-width) - var(--half-image-gap));
     height: auto;
 }
 
 
 div.image-container figure {
-    max-width: calc(50% - 10px);
+    max-width: calc(var(--half-width) - var(--half-image-gap));
     height: auto;
 }
 
@@ -514,8 +549,8 @@ div.image-container figure:only-child {
   
 
 .image-container > * {
-    flex: 0 0 calc(50% - 10px); 
-    max-width: calc(50% - 10px); 
+    flex: 0 0 calc(var(--half-width) - var(--half-image-gap)); 
+    max-width: calc(var(--half-width) - var(--half-image-gap)); 
     min-width: 0; 
     box-sizing: border-box;
 }
@@ -529,9 +564,9 @@ div.image-container figure:only-child {
     /* display: block; */
 
     transition-property: transform, box-shadow;
-    transition-duration: 0.3s;
+    transition-duration: var(--transition-duration-quick);
     transition-timing-function: ease-out;
-    transition-delay: 0.1s;
+    transition-delay: var(--transition-delay);
 }
   
 
@@ -588,7 +623,7 @@ div.image-container img:hover {
 /* ***************************************************************************** */
 /* Footer */
 footer { 
-    background: #22262f;
+    background: var(--footer-background-color);
     width: 100%;
     padding: 60px 0 20px;
     color: white;
@@ -608,7 +643,7 @@ div.footer-container {
 div.footer-content {
     flex-grow: 1;
     flex-basis: 0;
-    min-width: 200px;
+    min-width: var(--footer-content-min-width);
     margin: 25px 0;
 }
 
@@ -633,21 +668,21 @@ div.footer-content p {
 div.footer-content a {
     color: white;
     text-decoration: none;
-    transition: color 0.3s ease 0.1s;
+    transition: color var(--transition-duration-quick) ease var(--transition-delay);
 }
 
 
 div.footer-content a:hover {
-    color: rgb(41, 119, 202);
+    color: var(--nav-link-hover-color);
 }
 
 
 div.footer-bottom {
     margin-top: 40px;
     padding-top: 55px;
-    border-top: 1px solid rgba(255, 255, 255, 0.15);
+    border-top: 1px solid var(--footer-border-color);
     font-size: 0.8rem;
-    color: rgba(255, 255, 255, 0.5);
+    color: var(--footer-bottom-text-color);
     margin-left: auto;
     margin-right: auto;
 } 
@@ -669,7 +704,7 @@ div.footer-bottom p {
    
     
     div.container {
-        max-width: 90%;  
+        max-width: var(--website-main-width-mobile);  
     }
 
 
@@ -755,7 +790,7 @@ div.footer-bottom p {
 /* For ultrawide screens (2560px and up) */
 @media screen and (min-width: 2560px) {
     div.container {
-        max-width: 50%;
+        max-width: var(--website-main-width-ultrawide-2560);
     }
 }
 
@@ -763,6 +798,6 @@ div.footer-bottom p {
 /* For ultrawide screens (3440px and up) */
 @media screen and (min-width: 3440px) {
     div.container {
-        max-width: 40%;
+        max-width: var(--website-main-width-ultrawide-3440);
     }
 }
