--- a/style.css
+++ b/style.css
@@ -165,11 +165,17 @@ h1 {
     margin-bottom: 100px;
     /* padding-left: 10px; */
     /* padding-right: 10px; */
+    transition: text-shadow 0.4s var(--transition-style) var(--transition-delay);
 }
 
 
 h1.long-header {
     font-size: 4.0rem;
+}
+
+
+h1:hover {
+    text-shadow: 0 1.5rem 1.5rem rgba(0, 0, 0, 0.4), 0 0 2rem rgba(0, 0, 0, 0.2);
 }
 
 
@@ -583,7 +589,7 @@ div.image-container figure:only-child {
 
 
 div.image-container img:hover {
-    box-shadow: 0 0 2rem rgba(0, 0, 0, 0.2), 0 1.5rem 1.5rem rgba(0, 0, 0, 0.4);
+    box-shadow: 0 1.5rem 1.5rem rgba(0, 0, 0, 0.4), 0 0 2rem rgba(0, 0, 0, 0.2);
     transform: scale(var(--image-scale-hover));
 }
 
