--- a/style.css
+++ b/style.css
@@ -187,6 +187,12 @@ h2 {
     font-size: 2.6rem;
     margin-bottom: 50px;
     letter-spacing: 0.1rem;
+    transition: text-shadow 0.4s var(--transition-style) var(--transition-delay);
+}
+
+
+h2:hover {
+    text-shadow: 0 1.5rem 1.5rem rgba(0, 0, 0, 0.4), 0 0 2rem rgba(0, 0, 0, 0.2);
 }
 
 
