--- a/style.css
+++ b/style.css
@@ -712,6 +712,7 @@ div.footer-content h4 {
 
 
 div.footer-content p {
+    max-width: 100%;
     margin: 10px 0;
     font-size: 1.0rem;
     text-align: center;
