--- a/style.css
+++ b/style.css
@@ -236,8 +236,8 @@ h3 {
 
 
 h4 {
-    /* letter-spacing: 0.01rem; */
     font-size: 1.1rem;
+    letter-spacing: 0.07rem;
 }
 
 
@@ -845,6 +845,7 @@ div.footer-bottom p {
 
     h4 {
         font-size: 1.0rem;
+        letter-spacing: 0.04rem;
     }
 
 
@@ -899,7 +900,7 @@ div.footer-bottom p {
 
 
 
-/* For ultrawide screens (2560px and up) */
+/* For 1440p screens (2560px and up) */
 @media screen and (min-width: 2560px) {
     div.container {
         max-width: var(--website-main-width-ultrawide-2560);
