--- a/style.css
+++ b/style.css
@@ -100,6 +100,8 @@ section {
     width: 100%;
     padding-top: 7%;
     padding-bottom: 9%;
+    padding-left: 0.1%;
+    padding-right: 0.1%;
 }
 
 
