--- a/style.css
+++ b/style.css
@@ -3,7 +3,7 @@
     margin: 0;
     padding: 0;
     box-sizing: border-box;
-    /* outline: 1px solid red; */
+    outline: 1px solid red;
 }
 
 
@@ -100,8 +100,8 @@ section {
     width: 100%;
     padding-top: 7%;
     padding-bottom: 9%;
-    padding-left: 0.1%;
-    padding-right: 0.1%;
+    padding-left: 1%;
+    padding-right: 1%;
 }
 
 
@@ -133,6 +133,8 @@ div.section-divider {
 div.container {
     max-width: var(--website-main-width);  
     margin: 0 auto;
+    padding-left: 1%;
+    padding-right: 1%;
 }
 
 
