--- a/style.css
+++ b/style.css
@@ -357,6 +357,24 @@ nav.topbar .nav-links li:hover {
 }
 
 
+.progress-container {
+    position: absolute;
+    top: calc(var(--nav-topbar-height-offset) - 3px);
+    left: 0;
+    width: 100%;
+    height: 3px;
+    background: transparent;
+}
+
+
+.progress-bar {
+    height: 100%;
+    width: 0%;
+    background: var(--nav-link-hover-color);
+    transition: width 0.1s var(--transition-style);
+}
+
+
 
 
 /* ***************************************************************************** */
