--- a/style.css
+++ b/style.css
@@ -847,8 +847,9 @@ div.footer-bottom p {
 
 
     .parallax-container {
-        height: 40vh;
+        background-attachment: scroll;
         margin: 30% 0;
+        height: 25vh;
     }
 
 
