--- a/style.css
+++ b/style.css
@@ -973,21 +973,35 @@ div.footer-bottom p {
         margin-bottom: 8%;
     }
 
+
     div.footer-content p {
         margin: 6% 0;
     }
+
 
     div.footer-bottom {
         margin-top: 12%;
         padding-top: 17%;
     } 
 
+
     div.footer-bottom p {
         margin-bottom: 20%;
     }
 
+
     #copyright {
         margin-bottom: 15%;
+    }
+
+
+    .tilt-card-container {
+        perspective: none;
+    }
+    
+    .tilt-card {
+        transform-style: flat;
+        transition: none;
     }
 }
 
@@ -1023,4 +1037,18 @@ div.footer-bottom p {
         max-width: var(--website-main-width-ultrawide-3440);
     }
 
+    .parallax-container-1 {
+        background-position: 50% 0vh;
+    }
+
+}
+
+
+.tilt-card-container {
+    perspective: 80vw;
+}
+
+.tilt-card {
+    transform-style: preserve-3d;
+    transition: transform 0.5s ease-out;
 }
