--- a/style.css
+++ b/style.css
@@ -244,6 +244,17 @@ h4 {
 }
 
 
+h5 {
+    max-width: var(--text-max-width);
+    margin-left: auto;
+    margin-right: auto;
+    margin-bottom: 1.5%;
+    text-align: left;
+    font-size: 1.1rem;
+    letter-spacing: 0.07rem;
+}
+
+
 p {
     max-width: var(--text-max-width);
     margin-left: auto;
@@ -259,7 +270,8 @@ p {
     line-height: 1.7rem;
 }
 
-p a {
+p a,
+h5 a {
     color: white;
 }
 
@@ -919,6 +931,14 @@ div.footer-bottom p {
 
 
     h4 {
+        font-size: 1.0rem;
+        letter-spacing: 0.04rem;
+    }
+
+
+    h5 {
+        max-width: var(--text-max-width-mobile);
+        margin-bottom: 3%;
         font-size: 1.0rem;
         letter-spacing: 0.04rem;
     }
