--- a/style.css
+++ b/style.css
@@ -276,6 +276,17 @@ h5 a {
 }
 
 
+blockquote {
+    max-width: 60%;
+    margin-left: auto;
+    margin-right: auto;
+    text-align: left;
+    font-size: 1.1rem;
+    margin-bottom: var(--text-margin-bottom);
+    line-height: 1.4rem;
+}
+
+
 .italic {
     font-style: italic;
     font-weight: normal;
@@ -949,6 +960,13 @@ div.footer-bottom p {
         font-size: 1.0rem;
         margin-bottom: var(--text-margin-bottom-mobile);
         line-height: 1.4rem;
+    }
+
+    blockquote {
+        max-width: 85%;
+        font-size: 0.9rem;
+        margin-bottom: var(--text-margin-bottom-mobile);
+        line-height: 1.3rem;
     }
 
 
