--- a/style.css
+++ b/style.css
@@ -174,6 +174,7 @@ div.text-container.small-gap {
     left: 0;
     width: 100%;
     height: 100%;
+    border: none;
 }
 
 
@@ -359,20 +360,28 @@ nav.topbar {
 }
 
 
-nav.topbar .nav-links {
+nav.topbar ul {
     display: flex;
     list-style: none;
 }
 
 
-nav.topbar .nav-links a {
-    color: white;
-    text-decoration: none;
-    font-size: 1rem;
+nav.topbar .nav-links.left li {
+    margin-left: var(--nav-topbar-side-margins); 
 }
 
 
-nav.topbar .nav-links li {
+nav.topbar .nav-links.right li {
+    margin-right: var(--nav-topbar-side-margins); 
+}
+
+
+nav.topbar ul a {
+    display: block;
+    color: white;
+    text-decoration: none;
+    font-size: 1rem;
+
     padding: 10px;
     border: 1px solid transparent;
     border-radius: 3px;
@@ -384,13 +393,10 @@ nav.topbar .nav-links li {
 }
 
 
-nav.topbar .nav-links.left a {
-    margin-left: var(--nav-topbar-side-margins); 
-}
-
-
-nav.topbar .nav-links.right a {
-    margin-right: var(--nav-topbar-side-margins); 
+nav.topbar ul a:hover {
+    background-color: var(--nav-link-hover-color);
+    border-color: var(--nav-link-hover-color);
+    cursor: pointer; 
 }
 
 
@@ -409,13 +415,6 @@ nav.topbar .nav-links.right a:last-child {
     height: 16px;
     margin-right: 3px; 
     vertical-align: middle;
-}
-
-
-nav.topbar .nav-links li:hover {
-    background-color: var(--nav-link-hover-color);
-    border-color: var(--nav-link-hover-color);
-    cursor: pointer; 
 }
 
 
@@ -875,7 +874,7 @@ div.footer-bottom p {
 
 
     :root {
-        --nav-topbar-height-offset: 59px;
+        --nav-topbar-height-offset: 62px;
     }
 
 
@@ -934,7 +933,7 @@ div.footer-bottom p {
 
 
     nav.topbar .nav-links a {
-        font-size: 13px;
+        font-size: 14px;
     }
 
 
