--- a/style.css
+++ b/style.css
@@ -104,7 +104,8 @@ section {
 }
 
 
-section ul {
+section ul,
+section ol {
     max-width: var(--text-max-width);
     text-align: left;
     margin-left: auto;
@@ -113,7 +114,8 @@ section ul {
 }
 
 
-section ul a {
+section ul a,
+section ol a {
     color: white;
 }
 
@@ -124,6 +126,13 @@ section li {
     font-size: var(--font-paragraph-size);
     line-height: 1.5rem;
     /* color: white; */
+}
+
+
+section li ul {
+    margin-top: 2%; 
+    margin-bottom: 2%;
+    margin-left: 5%;
 }
 
 
@@ -150,6 +159,19 @@ div.heading-container {
     display: flex;
     justify-content: space-between;
     align-items: center;
+}
+
+
+div.toc-container li {
+    font-size: 1.3rem;
+    margin-bottom: 2%;
+}
+
+
+div.toc-container li ul {
+    margin-top: 2%; 
+    margin-bottom: 2%;
+    margin-left: 5%;
 }
 
 
@@ -1065,6 +1087,26 @@ div.footer-bottom p {
         font-size: 1rem;
         line-height: 1.4rem;
         margin-bottom: 3%;
+    }
+
+
+    section li ul {
+        margin-top: 3%; 
+        margin-bottom: 3%;
+        margin-left: 7%;
+    }
+
+
+    div.toc-container li {
+        font-size: 1.1rem;
+        margin-bottom: 5%;
+    }
+    
+    
+    div.toc-container li ul {
+        margin-top: 5%; 
+        margin-bottom: 5%;
+        margin-left: 7%;
     }
     
 
