--- a/style.css
+++ b/style.css
@@ -13,6 +13,7 @@
     font-weight: 100 900; 
     font-stretch: 75% 100%;
     font-style: normal;
+    font-display: block;
 }
 
 
@@ -22,6 +23,7 @@
     font-weight: 100 900; 
     font-stretch: 75% 100%;
     font-style: italic;
+    font-display: block;
 }
 
 
