Increased constrast in education section

--- a/style.css
+++ b/style.css
@@ -579,7 +579,8 @@ section.education {
     /* background-color: #82d8dc;  */
     /* background-color: lightblue; */
     /* background-color: rgb(100, 169, 193); */
-    background-color: rgb(71, 161, 191);
+    /* background-color: rgb(71, 161, 191); */
+    background-color: rgb(55, 160, 194);
 }
 
 
