--- a/style.css
+++ b/style.css
@@ -747,8 +747,9 @@ div.image-container figure:only-child {
   
 
 .image-container img {
-    max-width: 100%; 
-    width: auto; 
+    max-width: min(100%, attr(width px));
+    /* width: auto;  */
+    width: 100%; 
     height: auto;
     object-fit: contain;
     /* display: block; */
