--- a/style.css
+++ b/style.css
@@ -13,7 +13,7 @@
     font-weight: 100 900; 
     font-stretch: 75% 100%;
     font-style: normal;
-    font-display: block;
+    font-display: swap;
 }
 
 
