--- a/style.css
+++ b/style.css
@@ -23,7 +23,7 @@
     font-weight: 100 900; 
     font-stretch: 75% 100%;
     font-style: italic;
-    font-display: block;
+    font-display: swap;
 }
 
 
