--- a/style.css
+++ b/style.css
@@ -9,7 +9,8 @@
 
 @font-face {
     font-family: 'Roboto';
-    src: url('./fonts/Roboto-VariableFont_wdth,wght.ttf') format('truetype');
+    /* src: url('./fonts/Roboto-VariableFont_wdth,wght.ttf') format('truetype'); */
+    src: url('./fonts/Roboto-VariableFont_wdth,wght.woff2') format('woff2');
     font-weight: 100 900; 
     font-stretch: 75% 100%;
     font-style: normal;
@@ -19,7 +20,8 @@
 
 @font-face {
     font-family: 'Roboto';
-    src: url('./fonts/Roboto-Italic-VariableFont_wdth,wght.ttf') format('truetype');
+    /* src: url('./fonts/Roboto-Italic-VariableFont_wdth,wght.ttf') format('truetype'); */
+    src: url('./fonts/Roboto-Italic-VariableFont_wdth,wght.woff2') format('woff2');
     font-weight: 100 900; 
     font-stretch: 75% 100%;
     font-style: italic;
